[metadata]
name = server_config
author = Virgiliu Ionescu
author-email = ionescu.virgiliu@gmail.com   
summary = Server config progject
description-file = README.md
license_file = LICENSE
description-content-type = text/markdown; charset=UTF-8
requires-python = >=3.7
classifier =
        Development Status :: 1 - Planning
        Environment :: Web Environment
        Environment :: Console
        Intended Audience :: Developers
        Intended Audience :: Information Technology
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Programming Language :: Python
        Programming Language :: Python :: 3.7        

[files]
packages =
    server-config

[wheel]
universal = 1
